
[build-system]
requires = ["pyparsing >=2.4.5"]

[project]
name = "bind9_parser"
authors = [
    { name = "Stephen Egbert", email = "egberts@yahoo.com"},
]
dependencies = [
    "pyparsing >=2.4.5",
    "line_profiler",
]
requires-python = ">=3.7"
readme = "README.md"

classifiers = [

        'Development Status :: 4 - Beta',
        'Environment :: Web Environment',
        'Intended Audience :: Developers',
        'Intended Audience :: Information Technology',
        'Intended Audience :: System Administrators',
        'Intended Audience :: Web Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3 :: Only',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy',
        'Topic :: Internet :: Name Service (DNS)',
        'Topic :: Security',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: System :: Installation/Setup',
        'Topic :: System :: Networking',
        'Topic :: Text Processing',
        'Topic :: Utilities',
]
dynamic = ['license', 'keywords', 'version', 'description']

[project.optional-dependencies]
test = [
	"unittest",
]
doc = [ ]

[project.urls]
Documentation = "https://github.com/egberts/bind9_parser"
Source = "https://github.com/egberts/bind9_parser"
Changelog = "https://github.com/egberts/bind9_parser/CHANGES"

