
[build-system]
requires = ["pyparsing >=2.4.5"]
backend-path = ["."]

[project]
name = "bind9_parser"
authors = [
    { name = "Egberts", email = "egberts@github.com"},
]
description = "Parser for named.conf used by ISC Bind9 DNS daemon"
dependencies = [
    "pyparsing >=2.4.5",
    "line_profiler",
]
requires-python = ">=3.7"

classifiers = [
    "Intended Audience :: Web Developers",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
	"unittest",
]
doc = [ ]

[project.urls]
Documentation = "https://github.com/egberts/bind9_parser"
Source = "https://github.com/egberts/bind9_parser"
Changelog = "https://github.com/egberts/bind9_parser/ChangeLog"

